Correccion de clases en las etiquetas

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <!-- Menu de Navegación -->
         <nav class="menu-navegacion">
             <div class="contenedor-opciones">
-                <a href="#header" class="opciones texto-blanco tamano-texto">Inicio</a>
-                <a href="#acercaDeMi" class="opciones texto-blanco tamano-texto">Acerca de mi</a>
-                <a href="./views/proyectos.html" class="opciones texto-blanco tamano-texto">Mis proyectos</a>                
-                <a href="./views/referencias.html" class="opciones texto-blanco tamano-texto">Referencias</a>
-                <a href="./views/contacto.html" class="opciones texto-blanco tamano-texto">Contacto</a>                
+                <a href="#header" class="texto-nosubrayado texto-blanco tamano-texto">Inicio</a>
+                <a href="#acercaDeMi" class="texto-nosubrayado texto-blanco tamano-texto">Acerca de mi</a>
+                <a href="./views/proyectos.html" class="texto-nosubrayado texto-blanco tamano-texto">Mis proyectos</a>                
+                <a href="./views/referencias.html" class="texto-nosubrayado texto-blanco tamano-texto">Referencias</a>
+                <a href="./views/contacto.html" class="texto-nosubrayado texto-blanco tamano-texto">Contacto</a>
             </div>
         </nav>
     </header>
@@ -65,10 +65,10 @@
                 En esta página podrás encontrar a detalle los siguientes aspectos personales:
             </p>
             <ul style="list-style-type: '✓  '; margin-top: 0; margin-bottom: 5px;" class="tamano-texto">
-                <li><a href="#informacionBasica" class="opciones texto-blanco tamano-texto">Información básica</a></li>
-                <li><a href="#aspectosProfesionales" class="opciones texto-blanco tamano-texto">Aspectos profesionales</a></li>
-                <li><a href="#rasgosPersonalidad" class="opciones texto-blanco tamano-texto">Rasgos de personalidad</a></li>
-                <li><a href="#informacionAdicional" class="opciones texto-blanco tamano-texto">Información adicional</a></li>
+                <li><a href="#informacionBasica" class="texto-nosubrayado texto-blanco tamano-texto">Información básica</a></li>
+                <li><a href="#aspectosProfesionales" class="texto-nosubrayado texto-blanco tamano-texto">Aspectos profesionales</a></li>
+                <li><a href="#rasgosPersonalidad" class="texto-nosubrayado texto-blanco tamano-texto">Rasgos de personalidad</a></li>
+                <li><a href="#informacionAdicional" class="texto-nosubrayado texto-blanco tamano-texto">Información adicional</a></li>
             </ul>
         </section>
         <br>
@@ -79,9 +79,9 @@
                 <img src="./assets/icons/info-personal.png" style="width: 25px; height: 25px;" alt="Icono de informacion personal">
                 <h3 class="texto-blanco">Información básica</h3>
             </div>            
-            <p class="margen-inf-b texto-blanco tamano-texto"><b>Nombre:</b> German Alirio Bermudez Buitrago</p>
-            <p class="margen-inf-b texto-blanco tamano-texto"><b>Edad:</b> 29 Años</p>
-            <p class="margen-inf-b texto-blanco tamano-texto"><b>Lugar de residencia:</b>Bogotá - Colombia</p>
+            <p class="margen-inf-p texto-blanco tamano-texto"><b>Nombre:</b> German Alirio Bermudez Buitrago</p>
+            <p class="margen-inf-p texto-blanco tamano-texto"><b>Edad:</b> 29 Años</p>
+            <p class="margen-inf-p texto-blanco tamano-texto"><b>Lugar de residencia:</b>Bogotá - Colombia</p>
         </section>
         <br>
         <hr>        
@@ -90,8 +90,8 @@
                 <img src="./assets/icons/aspectos.png" style="width: 25px; height: 25px;" alt="Icono con CV">
                 <h3 class="texto-blanco">Aspectos profesionales</h3>
             </div>
-            <p class="margen-inf-b texto-blanco tamano-texto"><b>Profesión:</b> Tecnólogo en Analisis y Desarrollo de Software</p>
-            <p class="margen-inf-b texto-blanco tamano-texto"><b>Experiencia Profesional:</b></p>
+            <p class="margen-inf-p texto-blanco tamano-texto"><b>Profesión:</b> Tecnólogo en Analisis y Desarrollo de Software</p>
+            <p class="margen-inf-p texto-blanco tamano-texto"><b>Experiencia Profesional:</b></p>
             <div style="display: flex; flex-direction: row;">
                 <ul style="list-style-type: '★ '; width: 50%;">
                     <li class="texto-blanco tamano-texto"><b>Consejo Colombiano de Seguridad -</b> Desarrollador de Software JR</li>
@@ -111,7 +111,7 @@
                     <li style="list-style: none;" class="texto-blanco"><b>-</b> Manejo de herramientas ofimáticas como Microsoft Excel y Word.</li>
                 </ul>
             </div>
-            <p class="margen-inf-b texto-blanco tamano-texto"><b>Habilidades técnicas:</b></p>
+            <p class="margen-inf-p texto-blanco tamano-texto"><b>Habilidades técnicas:</b></p>
             <ul>
                 <li class="texto-blanco tamano-texto">Lenguajes de programacion PHP, Java, JavaScript</li>
                 <li class="texto-blanco tamano-texto">Lenguajes de marcado HTML5, Css3, Markdown</li>
@@ -131,11 +131,11 @@
                 <img src="./assets/icons/personalidad.png" style="width: 25px; height: 25px;" alt="Icono de personalidad">
                 <h3 class="texto-blanco">Rasgos de Personalidad</h3>
             </div>
-            <p class="texto-blanco tamano-texto margen-inf-b" style="text-align: justify;">
+            <p class="texto-blanco tamano-texto margen-inf-p" style="text-align: justify;">
                 Me considero una persona muy curiosa que le gusta indagar acerca de todo lo que pasa a su alrededor, realizando investigaciones por mi propia cuenta, me gusta tener conocimiento de muchas cosas porque considero que en esta vida debemos saber de todo un poco. Soy un apasionado por todo lo que hace y por todo lo que se propone, no me gusta rendirme a pesar de que las circunstancias sean las mas adversas, siempre trato de llegar hasta el final. Soy una persona muy comprometida tanto personalmente como profesionalmente, me gustan los retos porque de esa manera adquiero mas experiencia y mas conocimientos.
                 No me gustan las personas que son mentirosas, ni tampoco las personas que son asolapadas. Me gusta que las personas confien en lo que hago y confien en mi para contarme las cosas.
             </p>
-            <p class="tamano-texto texto-blanco margen-inf-b" style="text-align: justify;">En general considero que soy una persona fiel en todo el sentido de la palabra, soy más del tipo de persona que puede entregar todo porque los demás se sientan bien y felices. Me gusta salir a compartir con mis amigos jugando juegos de mesa y también sentarnos a hablar de todo un poco.</p>
+            <p class="tamano-texto texto-blanco margen-inf-p" style="text-align: justify;">En general considero que soy una persona fiel en todo el sentido de la palabra, soy más del tipo de persona que puede entregar todo porque los demás se sientan bien y felices. Me gusta salir a compartir con mis amigos jugando juegos de mesa y también sentarnos a hablar de todo un poco.</p>
         </section>
         <br>
         <hr>
@@ -184,9 +184,9 @@
     <br>
     <br>
     <footer>
-        <p class="texto-blanco margen-inf-b">Mi portafolio - Website</p>
-        <p class="texto-blanco margen-inf-b">&copy; Todos los derechos reservados - <i>German Bermudez</i></p>
-        <p class="texto-blanco margen-inf-b">Politicas de privacidad - Aviso legal</p>
+        <p class="texto-blanco margen-inf-p">Mi portafolio - Website</p>
+        <p class="texto-blanco margen-inf-p">&copy; Todos los derechos reservados - <i>German Bermudez</i></p>
+        <p class="texto-blanco margen-inf-p">Politicas de privacidad - Aviso legal</p>
         <div class="redes-sociales">
             <a href="https://www.linkedin.com/in/german-bermudez/" target="_blank" class="decoracion-icono"><i class="bi bi-linkedin"></i></a>
             <a href="https://www.facebook.com/?locale=es_LA" target="_blank" class="decoracion-icono"><i class="bi bi-facebook"></i></a>
