Correccion de links de las redes sociales, modificacion de lista de aspectos profesionales

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <p class="texto-blanco desarrollador tamano-texto">Desarrollador de software & Web</p>
                 <div class="redes-sociales">
                     <a href="https://www.linkedin.com/in/german-bermudez/" target="_blank" class="decoracion-icono"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank" class="decoracion-icono"><i class="bi bi-facebook"></i></a>
-                    <a href="https://web.whatsapp.com/" class="decoracion-icono"><i class="bi bi-whatsapp"></i></a>
-                    <a href="https://www.instagram.com/" class="decoracion-icono"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank" target="_blank" class="decoracion-icono"><i class="bi bi-facebook"></i></a>
+                    <a href="https://web.whatsapp.com/" target="_blank" class="decoracion-icono"><i class="bi bi-whatsapp"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" class="decoracion-icono"><i class="bi bi-instagram"></i></a>
                     <a href="https://github.com/Shermangnr" target="_blank" class="decoracion-icono"><i class="bi bi-github"></i></a>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                 <li class="texto-blanco tamano-texto">Lenguajes de marcado HTML5, Css3, Markdown</li>
                 <li class="texto-blanco tamano-texto">Uso de librerias para aplicar estilos como Bootstrap 5</li>
                 <li class="texto-blanco tamano-texto">Manejo de bases de datos SQL y NoSQL</li>
-                <li class="texto-blanco tamano-texto">Herramientas de versionamiento Git GitHub</li>
+                <li class="texto-blanco tamano-texto">Herramientas de versionamiento Git - GitHub</li>
                 <li class="texto-blanco tamano-texto">Uso de herramientas para la administración de BD <i>MySQL Workbench / Navicat</i></li>
                 <li class="texto-blanco tamano-texto">Experiencia en patrones de diseño como MVC (Modelo-Vista-Controlador)</li>
                 <li class="texto-blanco tamano-texto">Conocimiento en herramientas ofimaticas</li>
