Correccion de figcaption para que tenga responsive

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
             <div class="contenedor-fotos">
                 <div>
                     <img src="./assets/images/jugador-futbol.jpg" class="futbol" alt="Hombre jugando futbol">
-                    <figcaption class="texto-blanco">Jugando Futbol con mis amigos</figcaption>
+                    <figcaption class="texto-blanco tamano-texto">Jugando Futbol con mis amigos</figcaption>
                 </div>
                 <div>
                     <img src="./assets/images/equipo-cheer.JPG" class="cheer" alt="Equipo de porras Victory Fenix">
-                    <figcaption class="texto-blanco">Equipo Victory Fenix / <i>Cartagena - Colombia</i></figcaption>
+                    <figcaption class="texto-blanco tamano-texto">Equipo Victory Fenix / <i>Cartagena - Colombia</i></figcaption>
                 </div>
             </div>
             <br>
